# ChangeLog for sci-visualization/xds-viewer
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-visualization/xds-viewer/ChangeLog,v 1.1 2010/01/31 22:52:49 jlec Exp $

  31 Jan 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  +xds-viewer-0.6.ebuild, +metadata.xml:
  moved to EAPI="2"
  removed stupid PDEPEND

  11 Mar 2009; Justin Lecher (jlec) <jlec@gentoo.org>
  xds-viewer-0.6.ebuild:
  make use of new DOC_HTML from cmake-utils.eclass

*xds-viewer-0.6 (08 Mar 2009)

  08 Mar 2009; justin Lecher (jlec) <jlec@gentoo.org>
  +xds-viewer-0.6.ebuild:
  version bump to 0.6

  25 Feb 2009; justin Lecher (jlec) <jlec@gentoo.org>
  +sci-visualization/xds-viewer/metadata.xml:
  initial checkin
