@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST xds-viewer-0.6.tar.gz 408315 RMD160 4eca53231687bde4127ce8dcdba10194c824b52e SHA1 a59e9c309037bfe9eb83ee0360e44e28e481615f SHA256 a4088246f002fd33add8fe1ea5453696e2a3e01d4c1ae189a496274b46da5a75
-EBUILD xds-viewer-0.6.ebuild 656 RMD160 7a00bb38496ab5e3c6403fd4e1e35958987db070 SHA1 f5433f86dbef5f9c775ff7789915beb109506bb5 SHA256 83a93b46784819f9f32dc407148591eece542e4cdde33f92d3e80fd5f5f531df
-MISC ChangeLog 752 RMD160 05b1c835d82259496326a9b0cd557be2f73877cc SHA1 f8436a8f9d975a054b1afb56917be7ffb12caed7 SHA256 6d577dc1a2bd352ac7d6c0b2b8277411e14b05cf74d0dd851050140d2bf53627
+EBUILD xds-viewer-0.6.ebuild 656 RMD160 3e0bf6f84e956c9465f638a7211797daef0fe032 SHA1 fb11f04fb2c158df982511e9ccaa185de74708ea SHA256 9b854077efa4171170d1511f825ee41e1829731186d9e9e717e6744bf47fb479
+MISC ChangeLog 867 RMD160 34e487602c79fd9b08be78850ab84a0ef85619a3 SHA1 a9bad146d072e68fb8bb32729292b9deec6d0868 SHA256 9c53ddc4775501697d50a97792b67fd2ce3f58101187e55e72d77d781d2bc313
 MISC metadata.xml 215 RMD160 bc9c07aa91f2f175542244e4e4522a73558210a1 SHA1 facb283386de1c0b6b938cdcd4dde04d1694298b SHA256 13f32353652adbd3d934d41381cfc2cacc9e1127c508cebc73806cc1026ee80c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAktmCccACgkQgAnW8HDreRbIcgCfW2VrjlALYNsnvHElSuEqfmBO
-k9oAoIvVZQCCu8RCeqGCP4GwE5d02U6f
-=J2W8
+iEYEARECAAYFAk34d0QACgkQgAnW8HDreRYlbwCgrz0mH7x6GIDOQFf8g4VSQJUx
+j40AnR2eGPdsUhNFaVYpCKfkIHxal2B8
+=X231
 -----END PGP SIGNATURE-----
